--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "eslint-webpack-plugin": "^3.1.1",
     "file-loader": "^6.2.0",
     "fs-extra": "^10.0.0",
-    "gh-pages": "^4.0.0",
     "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.4.3",
@@ -85,7 +84,8 @@
   },
   "devDependencies": {
     "eslint": "^8.0.0",
-    "eslint-config-react-app": "^7.0.1"
+    "eslint-config-react-app": "^7.0.1",
+    "gh-pages": "^2.2.0"
   },
   "jest": {
     "roots": [
